# pixter

./: .gitignore  Cargo.toml  README.md  profile.ps1  rustfmt.toml
src/: image_ref.rs  lib.rs  physical_image.rs  pixel_iter.rs
src/image_ref/: iter.rs
