[package]
name = "pixter"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partial_const = { version = "0.2.1", default_features = false, features = ["usize"] }
rayon = "1.5.0"
image = "0.23.14"
itertools = "0.10.0"
